--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@babylonjs/core": "^8.4.0",
     "@babylonjs/havok": "^1.3.10",
+    "@babylonjs/loaders": "^8.4.0",
     "@babylonjs/materials": "^8.4.0"
   },
   "devDependencies": {
